kubernetes/svc-k8s-niagara.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-niagara
  namespace: default
spec:
  ports:
  - name: platform-port
    port: 5011
    protocol: TCP
    targetPort: 5011
  - name: station-port
    port: 4911
    protocol: TCP
    targetPort: 4911
  selector:
    app: k8s-niagara
